fixed colors and alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background:  black;
+	background:  rgb(0, 0, 0);
 	margin: 0;
 }
 
@@ -15,7 +15,7 @@ body {
 
 .card {
 	height: 100px;
-	background: darkred;
-	border: 5px solid white;
+	background: rgb(94, 2, 2);
+	border: 5px solid rgb(52, 1, 1);
 	cursor: pointer;
 }   
